--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "test:cover": "jest --coverage",
-    "test:watch": "jest --watch --coverage"
+    "test:watch": "jest --watch"
   },
   "author": "superzadeh <superzadeh@outlook.com>",
   "license": "MIT",
